<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".presentation.get_started.GetStartedFragment">

    <Space
        android:id="@+id/topSpace"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/ivPizza"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginBottom="14dp"
        android:src="@drawable/img_coffee" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_started_title"
        android:textAlignment="center"
        android:textSize="36sp"
        android:layout_marginHorizontal="14dp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_started_subtitle"
        android:textAlignment="center"
        android:layout_marginTop="6dp"
        android:layout_marginHorizontal="14dp"
        android:textSize="18sp"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGetStarted"
        android:layout_marginHorizontal="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="34dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@null"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Space
        android:id="@+id/bottomSpace"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>