<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/getStartedFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.coffeeshopapp.presentation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.coffeeshopapp.presentation.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.coffeeshopapp.presentation.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.coffeeshopapp.presentation.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/getStartedFragment"
        android:name="com.example.coffeeshopapp.presentation.get_started.GetStartedFragment"
        android:label="fragment_get_started"
        tools:layout="@layout/fragment_get_started">
        <action
            android:id="@+id/action_getStartedFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.coffeeshopapp.presentation.authentication.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>


    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.coffeeshopapp.presentation.authentication.register.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
</navigation>