<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.authentication.create_new_password.CreateNewPasswordFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/create_new_password_description"
            android:textColor="@color/gray_dark_2"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/tvNewPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="4dp"
            android:paddingVertical="4dp"
            android:text="@string/new_password"
            android:textColor="@color/text_gray_dark"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/etNewPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:autofillHints="First Name"
            android:background="@drawable/bg_custom_input"
            android:hint="@string/enter_your_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingHorizontal="12dp"
            android:paddingVertical="9dp"
            android:textColorHint="@color/gray_light_3"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNewPassword" />

        <TextView
            android:id="@+id/tvConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="4dp"
            android:paddingVertical="4dp"
            android:text="@string/confirm_new_password"
            android:textColor="@color/text_gray_dark"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/etConfirmNewPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etNewPassword" />

        <EditText
            android:id="@+id/etConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:autofillHints="First Name"
            android:background="@drawable/bg_custom_input"
            android:hint="@string/confirm_new_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingHorizontal="12dp"
            android:paddingVertical="9dp"
            android:textColorHint="@color/gray_light_3"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvConfirmNewPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/selector_orange_button"
            android:backgroundTint="@null"
            android:gravity="center"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@drawable/selector_orange_button_text"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etConfirmNewPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>